Stopped post titles from overflowing horizontally when viewed on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,3 +348,7 @@ pre {
         display: block;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .post-title { font-size: 32px; }
+}
